tests/sources/invalid/enums/enum_construct_errors.fire
// Malformed enum variant constructions.
enum Color {
    Red,
    Green
}

// Missing variant name after '.'
a: Color = Color.;  //~ ERROR FS-PARSE-0010 @18
//~^ ERROR FS-PARSE-0010 @18

// Unknown variant
b: Color = Color.Purple;  //~ ERROR FS-PARSE-0012 @18
